--- a/input.css
+++ b/input.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+body {
+  @apply text-slate-50;
+}
+h1 {
+  @apply font-bold text-2xl;
+}
+input {
+  @apply bg-zinc-800 autofill:bg-zinc-800 autofill:text-slate-50 p-1.5;
+}
+.btn-primary {
+  @apply bg-teal-700 font-bold py-2 px-4 rounded transition-colors duration-300 hover:bg-teal-800 cursor-pointer;
+}
