--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -7,58 +7,68 @@
     <link href="/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <main class="flex flex-col items-center">
-      <h1 class="text-center">Sign Up</h1>
-      <form
-        action="/sign-up"
-        method="post"
-        class="flex flex-col space-y-3 w-2xl py-2"
-      >
-        <label for="first-name">First Name</label>
-        <input
-          id="first-name"
-          name="firstName"
-          placeholder="First Name"
-          type="text"
-        />
-        <label for="first-name">Last Name</label>
-        <input
-          id="last-name"
-          name="lastName"
-          placeholder="Last Name"
-          type="text"
-        />
-        <label for="username">Username</label>
-        <input
-          id="username"
-          name="username"
-          placeholder="Username"
-          type="text"
-        />
-        <label for="password">Password</label>
-        <input
-          id="password"
-          name="password"
-          placeholder="Password"
-          type="password"
-        />
-        <div class="align-center">
-          <label for="isAdmin">Are you an admin?</label>
-          <input type="checkbox" name="isAdmin" id="is-admin" value="true" />
-        </div>
-
-        <button
-          class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 cursor-pointer"
+    <main
+      class="flex justify-center items-center min-h-screen bg-gradient-to-r from-teal-900 to-emerald-500"
+    >
+      <div class="flex flex-col justify-center bg-zinc-700 w-xl h-fit p-5">
+        <h1 class="text-center">Create an Account</h1>
+        <form
+          action="/sign-up"
+          method="post"
+          class="flex flex-col space-y-3 p-10 w-full"
         >
-          Sign Up
-        </button>
-      </form>
-    </main>
+          <label for="first-name">First Name</label>
+          <input id="first-name" name="firstName" type="text" />
+          <label for="first-name">Last Name</label>
+          <input
+            id="last-name"
+            name="lastName"
+            type="text"
+            autocomplete="off"
+          />
+          <label for="username">Username</label>
+          <input id="username" name="username" type="text" />
+          <label for="password">Password</label>
+          <input
+            id="password"
+            name="password"
+            type="password"
+            autocomplete="new-password"
+          />
+          <div class="inline-flex items-center">
+            <label class="flex items-center cursor-pointer relative">
+              <input
+                type="checkbox"
+                class="peer h-5 w-5 cursor-pointer transition-all appearance-none rounded shadow hover:shadow-md border border-slate-300 checked:bg-slate-800 checked:border-slate-800"
+                id="check-custom-icon"
+                value="true"
+              />
+              <span
+                class="absolute text-teal-500 opacity-0 peer-checked:opacity-100 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-3.5 h-3.5"
+                >
+                  <path
+                    d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"
+                  />
+                </svg>
+              </span>
+            </label>
+            <label for="isAdmin" class="ml-1">I am an admin.</label>
+          </div>
 
-    <% if(errors) { errors.forEach(error => {%>
-    <section class="md:w-2xl mx-auto">
-      <p class="text-red-500"><%= error.msg %></p>
-    </section>
-    <%})} %>
+          <button class="btn-primary">Sign Up</button>
+          <% if(errors) { errors.forEach(error => {%>
+          <section class="md:w-2xl mx-auto">
+            <p class="text-red-500"><%= error.msg %></p>
+          </section>
+          <%})} %>
+        </form>
+      </div>
+    </main>
   </body>
 </html>
