--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -10,12 +10,12 @@
     <main
       class="flex justify-center items-center min-h-screen bg-gradient-to-r from-teal-900 to-emerald-500"
     >
-      <div class="flex flex-col justify-center bg-zinc-700 w-xl h-fit p-5">
+      <div class="flex flex-col justify-center bg-zinc-700 w-xl p-10">
         <h1 class="text-center">Create an Account</h1>
         <form
           action="/sign-up"
           method="post"
-          class="flex flex-col space-y-3 p-10 w-full"
+          class="flex flex-col space-y-3 p-5 w-full"
         >
           <label for="first-name">First Name</label>
           <input id="first-name" name="firstName" type="text" />
@@ -40,7 +40,8 @@
               <input
                 type="checkbox"
                 class="peer h-5 w-5 cursor-pointer transition-all appearance-none rounded shadow hover:shadow-md border border-slate-300 checked:bg-slate-800 checked:border-slate-800"
-                id="check-custom-icon"
+                id="admin"
+                name="isAdmin"
                 value="true"
               />
               <span
