feat: add middleware to easily access current user

--- a/views/join-the-club.ejs
+++ b/views/join-the-club.ejs
@@ -13,7 +13,7 @@
       <div class="flex flex-col justify-center bg-zinc-700 w-xl p-10">
         <h1>Enter the Correct Password to Become a Member of the Cluuuub!</h1>
         <form
-          action="/join-the-club/<%= user.id %>"
+          action="/join-the-club"
           method="post"
           class="flex flex-col space-y-3 p-5 w-full"
         >
