--- a/public/styles.css
+++ b/public/styles.css
@@ -15,10 +15,7 @@
     --color-teal-900: oklch(0.386 0.063 188.416);
     --color-slate-50: oklch(0.984 0.003 247.858);
     --color-slate-300: oklch(0.869 0.022 252.894);
-    --color-slate-600: oklch(0.446 0.043 257.281);
     --color-slate-800: oklch(0.279 0.041 260.031);
-    --color-gray-600: oklch(0.446 0.03 256.802);
-    --color-zinc-600: oklch(0.442 0.017 285.786);
     --color-zinc-700: oklch(0.37 0.013 285.805);
     --color-zinc-800: oklch(0.274 0.006 286.033);
     --spacing: 0.25rem;
@@ -225,9 +222,6 @@
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
-  .mt-2 {
-    margin-top: calc(var(--spacing) * 2);
-  }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
@@ -296,9 +290,6 @@
   }
   .w-25 {
     width: calc(var(--spacing) * 25);
-  }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
   }
   .w-full {
     width: 100%;
@@ -378,9 +369,6 @@
   .\!bg-zinc-700 {
     background-color: var(--color-zinc-700) !important;
   }
-  .bg-zinc-600 {
-    background-color: var(--color-zinc-600);
-  }
   .bg-zinc-700 {
     background-color: var(--color-zinc-700);
   }
@@ -401,9 +389,6 @@
   .to-emerald-500 {
     --tw-gradient-to: var(--color-emerald-500);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
@@ -442,20 +427,17 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-gray-600 {
-    color: var(--color-gray-600);
-  }
   .text-red-500 {
     color: var(--color-red-500);
   }
   .text-red-600 {
     color: var(--color-red-600);
   }
-  .text-slate-600 {
-    color: var(--color-slate-600);
-  }
   .text-teal-500 {
     color: var(--color-teal-500);
+  }
+  .italic {
+    font-style: italic;
   }
   .underline {
     text-decoration-line: underline;
